# crpf

./: .env.example  .gitignore  Makefile  README.md  test_api.py
backend/: check_config.py  check_db.py  check_settings.py  debug_cartographer.py  migrate_5432.py  migrate_db.py  pyproject.toml  smoke_test.py  test_db_ports.py  test_endpoint.py
backend/alembic/: env.py
backend/policies/: adjudicator.rego
backend/pramaan/: __init__.py  auth.py  config.py  main.py
backend/pramaan/agents/: __init__.py  adjudicator.py  cartographer.py  evidence_graph.py  excavator.py  extractor.py  skeptic.py  summarizer.py
backend/pramaan/db/: __init__.py  base.py  models.py  session.py
backend/pramaan/dsl/: __init__.py  normalize.py  types.py
backend/pramaan/engine/: evaluator.py
backend/pramaan/ingestion/: __init__.py  docx.py  pdf_scanned.py  pdf_typed.py  photo.py  router.py  xlsx.py
backend/pramaan/ledger/: __init__.py  chain.py
backend/pramaan/llm/: __init__.py  client.py  gemini_client.py  mock.py
backend/pramaan/prompts/: cartographer.py  excavator.py
backend/pramaan/routers/: auth.py  bidders.py  health.py  tenders.py
backend/pramaan/scripts/: __init__.py  db_reset.py  ledger_verify.py  replay.py  seed_demo.py
backend/tests/: test_dsl_types.py  test_evidence_graph.py  test_ledger_chain.py
docs/: 01-solution.md  02-architecture.md  03-criterion-dsl.md  04-document-pipeline.md  05-adjudication.md  06-audit-ledger.md  07-officer-ux.md  08-integrity-layer.md  09-stack-rationale.md  10-risks-tradeoffs.md  11-round2-roadmap.md  appendix-sample-io.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/bidder/: layout.tsx  page.tsx
frontend/app/tenders/: page.tsx
frontend/components/: auth-provider.tsx  pdf-viewer.tsx  providers.tsx  site-header.tsx
frontend/lib/: api.ts  auth.ts  utils.ts
infra/: docker-compose.yml
infra/postgres/: init.sql
samples/: README.md
samples/tender_construction_2026/: tender.txt
scripts/: pramaan_colab_vllm.ipynb
(+19 files in other folders)
