[project]
name = "pramaan"
version = "0.1.0"
description = "PRAMAAN — AI tender evaluation for CRPF"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # DB
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    # Storage
    "boto3>=1.35.0",                  # MinIO (S3-compatible)
    # LLM
    "openai>=1.59.0",                 # speaks OpenAI Chat Completions schema
    "instructor>=1.7.0",              # structured output enforcement
    "tiktoken>=0.8.0",
    # Document understanding
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.4",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    # Rules engine
    "httpx>=0.28.0",                  # OPA HTTP client
    # Crypto / signing
    "cryptography>=44.0.0",
    # Vector store (W3+)
    "qdrant-client>=1.12.0",
    # Utilities
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "typer>=0.15.0",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
paddle = [
    # Optional: heavier OCR engine. Disabled by default on Windows.
    "paddlepaddle>=3.0.0",
    "paddleocr>=2.9.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pramaan"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line length is enforced by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
